# grimoire-beholder-mcp

./: .gitignore  AGENTS.md  ARCHITECTURE.md  PROJECT_LOG.md  README.md  config.toml  pyproject.toml
mcpb/: manifest.json
mcpb/server/: serve.py
src/book_rag/: __init__.py  chunk.py  cli.py  config.py  contextualize.py  db.py  embed.py  ingest.py  mcp_server.py
src/book_rag/retrieval/: __init__.py  fts.py  strategies.py
src/book_rag/sources/: __init__.py  common.py  epub.py  pdf.py  plaintext.py
src/grimoire_beholder/: __init__.py  cli.py  config.py  db.py  ingest.py  mcp_server.py  ollama_client.py  search.py
src/grimoire_beholder/retrieval/: __init__.py  fusion.py  strategies.py  vector.py
src/grimoire_beholder/sources/: __init__.py  common.py  epub.py  pdf.py  plaintext.py
tests/: conftest.py  fakes.py  test_chunk.py  test_cli.py  test_contextualize.py  test_db.py  test_embed.py  test_ingest.py  test_mcp_server.py  test_ollama_client.py  test_retrieval.py  test_search.py  test_sources_epub.py  test_sources_pdf.py  test_sources_pdf_llm_toc.py  test_sources_plaintext.py  test_sources_registry.py
