[project]
name = "book-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Palanx", email = "tmunizq@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ebooklib>=0.20",
    "lxml>=6.1.1",
    "mcp>=1.28.0",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "pymupdf>=1.27.2.3",
    "tenacity>=9.1.4",
    "tqdm>=4.68.3",
    "typer>=0.26.7",
]

[project.scripts]
book-rag = "book_rag.cli:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
